Prepare for deploy

--- a/PlantMonitor.Api/appsettings.Development.json
+++ b/PlantMonitor.Api/appsettings.Development.json
@@ -1,4 +1,41 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=PlantMonitoringDb;Username=postgres;Password=your_password"
+  },
+  "Jwt": {
+    "Key": "your-super-secret-jwt-key-for-development-32-characters-minimum",
+    "Issuer": "http://localhost:5000",
+    "Audience": "http://localhost:5000",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
+  },
+  "ApiSettings": {
+    "BaseUrl": "http://localhost:5000",
+    "MaxRequestsPerMinute": 1000,
+    "EnableSwagger": true,
+    "EnableDetailedErrors": true,
+    "ApiVersion": "v1"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "http://localhost:8081",
+      "http://192.168.4.1",
+      "https://localhost:3000"
+    ]
+  },
+  "Database": {
+    "CommandTimeout": 30,
+    "EnableSensitiveDataLogging": true,
+    "EnableDetailedErrors": true,
+    "MaxRetryCount": 3
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Debug",
@@ -6,6 +43,28 @@
         "Microsoft": "Information",
         "System": "Information"
       }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/plant-monitoring-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+  },
+  "HealthChecks": {
+    "UI": {
+      "HealthChecksUIEnabled": true
     }
   }
 }
