--- a/PlantMonitor.Api/appsettings.json
+++ b/PlantMonitor.Api/appsettings.json
@@ -1,38 +1,64 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PlantMonitorDb;Trusted_Connection=true;MultipleActiveResultSets=true;"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
+    }
   },
-  "JwtSettings": {
-    "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
-    "Issuer": "PlantMonitorApi",
-    "Audience": "PlantMonitorApp",
-    "ExpiryInHours": "24"
+  "ConnectionStrings": {
+    "DefaultConnection": "$DATABASE_URL"
+  },
+  "Jwt": {
+    "Key": "$JWT_SECRET_KEY",
+    "Issuer": "$API_BASE_URL",
+    "Audience": "$API_BASE_URL",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 7
+  },
+  "ApiSettings": {
+    "BaseUrl": "$API_BASE_URL",
+    "MaxRequestsPerMinute": 100,
+    "EnableSwagger": false,
+    "EnableDetailedErrors": false,
+    "ApiVersion": "v1"
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://your-frontend-domain.com",
+      "http://localhost:3000",
+      "http://localhost:8081",
+      "http://192.168.4.1"
+    ]
+  },
+  "Database": {
+    "CommandTimeout": 30,
+    "EnableSensitiveDataLogging": false,
+    "EnableDetailedErrors": false,
+    "MaxRetryCount": 3
   },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
         "Microsoft": "Warning",
-        "System": "Warning"
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore": "Warning"
       }
     },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "logs/plantmonitor-.log",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 30,
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
         }
       }
-    ]
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   },
-  "AllowedHosts": "*"
+  "HealthChecks": {
+    "UI": {
+      "HealthChecksUIEnabled": false
+    }
+  }
 }
