Small changes for deploy

--- a/PlantMonitor.Api/appsettings.json
+++ b/PlantMonitor.Api/appsettings.json
@@ -1,11 +1,4 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "DefaultConnection": "$DATABASE_URL"
   },
@@ -16,20 +9,18 @@
     "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
+  "JwtSettings": {
+    "SecretKey": "$JWT_SECRET_KEY",
+    "Issuer": "$API_BASE_URL",
+    "Audience": "$API_BASE_URL",
+    "ExpiryInHours": "24"
+  },
   "ApiSettings": {
     "BaseUrl": "$API_BASE_URL",
     "MaxRequestsPerMinute": 100,
     "EnableSwagger": false,
     "EnableDetailedErrors": false,
     "ApiVersion": "v1"
-  },
-  "Cors": {
-    "AllowedOrigins": [
-      "https://your-frontend-domain.com",
-      "http://localhost:3000",
-      "http://localhost:8081",
-      "http://192.168.4.1"
-    ]
   },
   "Database": {
     "CommandTimeout": 30,
@@ -53,12 +44,7 @@
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {Level:u3}] {Message:lj} {Properties:j}{NewLine}{Exception}"
         }
       }
-    ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    ]
   },
-  "HealthChecks": {
-    "UI": {
-      "HealthChecksUIEnabled": false
-    }
-  }
+  "AllowedHosts": "*"
 }
