--- a/PlantMonitor.Infrastructure/PlantMonitor.Infrastructure.csproj
+++ b/PlantMonitor.Infrastructure/PlantMonitor.Infrastructure.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.6" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
